Bug fix: vertical alignment of cross-reference tables.

--- a/analysis/www/style/default.css
+++ b/analysis/www/style/default.css
@@ -13,6 +13,9 @@ h1 {
 h2 {
 	font-size: 1.5em;
 }
+th {
+	font-weight: bold;
+}
 /* End of Headings */
 
 
